--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
+    "downloadjs": "^1.4.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
