--- a/api/al/_default_al_config.json
+++ b/api/al/_default_al_config.json
@@ -2,8 +2,8 @@
   "label_class": {
     "params": {
       "loss": "hinge",
-      "penalty": "l2",
-      "eta0": 0.1,
+      "penalty": "elasticnet",
+      "eta0": 0.05,
       "alpha": 0.0001,
       "learning_rate": "adaptive"
     },
@@ -12,14 +12,14 @@
   "label_levels": {
     "params": {
       "loss": "hinge",
-      "penalty": "l2",
-      "eta0": 0.01,
-      "alpha": 0.001,
+      "penalty": "elasticnet",
+      "eta0": 0.05,
+      "alpha": 0.0001,
       "learning_rate": "adaptive"
     },
     "classifier": "SGDClassifier"
   },
   "retrain_rate": 1000,
-  "batch_size": 10,
+  "batch_size": 3,
   "n_new": 0
 }
