--- a/api/al/al_config.json
+++ b/api/al/al_config.json
@@ -1,1 +1,25 @@
-{"label_class": {"params": {"loss": "hinge", "penalty": "l2", "eta0": 0.1, "alpha": 0.0001, "learning_rate": "adaptive"}, "classifier": "SGDClassifier"}, "label_levels": {"params": {"loss": "hinge", "penalty": "l2", "eta0": 0.01, "alpha": 0.001, "learning_rate": "adaptive"}, "classifier": "SGDClassifier"}, "retrain_rate": 1000, "batch_size": 3, "n_new": 477}
+{
+  "label_class": {
+    "params": {
+      "loss": "hinge",
+      "penalty": "elasticnet",
+      "eta0": 0.05,
+      "alpha": 0.0001,
+      "learning_rate": "adaptive"
+    },
+    "classifier": "SGDClassifier"
+  },
+  "label_levels": {
+    "params": {
+      "loss": "hinge",
+      "penalty": "elasticnet",
+      "eta0": 0.05,
+      "alpha": 0.0001,
+      "learning_rate": "adaptive"
+    },
+    "classifier": "SGDClassifier"
+  },
+  "retrain_rate": 1000,
+  "batch_size": 3,
+  "n_new": 0
+}
