--- a/api/al/al_config_options.json
+++ b/api/al/al_config_options.json
@@ -15,12 +15,12 @@
         },
         "penalty": {
           "type": "string",
-          "default": "l2",
+          "default": "elasticnet",
           "range": ["l2", "l1", "elasticnet", null]
         },
         "eta0": {
           "type": "float",
-          "default": 0.1,
+          "default": 0.05,
           "range": [0.001, 1]
         },
         "alpha": {
@@ -52,17 +52,17 @@
         },
         "penalty": {
           "type": "string",
-          "default": null,
+          "default": "elasticnet",
           "range": ["l2", "l1", "elasticnet", null]
         },
         "eta0": {
           "type": "float",
-          "default": 0.01,
+          "default": 0.05,
           "range": [0.001, 1]
         },
         "alpha": {
           "type": "float",
-          "default": 0.001,
+          "default": 0.0001,
           "range": [0, 100]
         },
         "learning_rate": {
