--- a/api/al/al_config.json
+++ b/api/al/al_config.json
@@ -1,25 +1,1 @@
-{
-  "label_class": {
-    "params": {
-      "loss": "hinge",
-      "penalty": "elasticnet",
-      "eta0": 0.05,
-      "alpha": 0.0001,
-      "learning_rate": "adaptive"
-    },
-    "classifier": "SGDClassifier"
-  },
-  "label_levels": {
-    "params": {
-      "loss": "hinge",
-      "penalty": "elasticnet",
-      "eta0": 0.05,
-      "alpha": 0.0001,
-      "learning_rate": "adaptive"
-    },
-    "classifier": "SGDClassifier"
-  },
-  "retrain_rate": 1000,
-  "batch_size": 3,
-  "n_new": 0
-}
+{"label_class": {"params": {"loss": "hinge", "penalty": "elasticnet", "eta0": 0.05, "alpha": 0.0001, "learning_rate": "adaptive"}, "classifier": "SGDClassifier"}, "label_levels": {"params": {"loss": "hinge", "penalty": "elasticnet", "eta0": 0.05, "alpha": 0.0001, "learning_rate": "adaptive"}, "classifier": "SGDClassifier"}, "retrain_rate": 1000, "batch_size": 3, "n_new": 0}
